tests/baselines/reference/tsxInvokeComponentType.errors.txt
tests/cases/compiler/tsxInvokeComponentType.tsx(6,14): error TS2737: Property 'someKey' is missing in type '{}' but present in type '{ someKey: string; }'.


==== tests/cases/compiler/tsxInvokeComponentType.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import React, { ComponentType } from "react";
    
    declare const Elem: ComponentType<{ someKey: string }>;
    
    const bad = <Elem />;
                 ~~~~
!!! error TS2737: Property 'someKey' is missing in type '{}' but present in type '{ someKey: string; }'.
    
    const good = <Elem someKey="ok" />;
    
    declare const Elem2: ComponentType<{ opt?: number }>;
    const alsoOk = <Elem2>text</Elem2>;
    